fix: 환경변수 수정

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_GISCUS_REPO='rxb8k/blog'
-NEXT_PUBLIC_GISCUS_REPOSITORY_ID='R_kgDOH_ZtBg'
-NEXT_PUBLIC_GISCUS_CATEGORY='Announcements'
-NEXT_PUBLIC_GISCUS_CATEGORY_ID='DIC_kwDOH_ZtBs4CSl3W'
+NEXT_PUBLIC_GISCUS_REPO=https://github.com/rxb8k/blog
+NEXT_PUBLIC_GISCUS_REPOSITORY_ID=R_kgDOH_ZtBg
+NEXT_PUBLIC_GISCUS_CATEGORY=Announcements
+NEXT_PUBLIC_GISCUS_CATEGORY_ID=DIC_kwDOH_ZtBs4CSl3W
 #NEXT_PUBLIC_UTTERANCES_REPO=
 #NEXT_PUBLIC_DISQUS_SHORTNAME=
 
